plugins {
	id 'application'
	id 'eclipse'
}

sourceCompatibility = 17
targetCompatibility = 17

distTar.enabled=false
distZip.enabled=true

mainClassName='kieker.tools.resource.monitor.ResourceMonitorMain'

sourceSets.main.resources.srcDirs = [ '../resources' ]

dependencies {
	implementation project(":tools")

	implementation "com.beust:jcommander:${jcommanderVersion}"
}


task uploadArchives {
	println 'resource-monitor skipped'
}

eclipse {
	classpath {
		file {
			whenMerged { classpath ->
				classpath.entries.removeAll { entry ->
					entry instanceof org.gradle.plugins.ide.eclipse.model.ProjectDependency
						&& ['/common', '/tools'].contains(entry.path)
						&& entry.entryAttributes['test']
				}
			}
		}
	}
}

tasks.named("compileJava") {
	options.compilerArgs += ['--add-reads', "kieker.analysis=ALL-UNNAMED",
							 '--add-reads', "kieker.tools=ALL-UNNAMED",
							 '--add-reads', "kieker.tools.resource.monitor=ALL-UNNAMED",
	]
}